--- a/yahtzee-react/src/css/App.css
+++ b/yahtzee-react/src/css/App.css
@@ -9,9 +9,10 @@
 
 .App-header {
   background-color: #222;
+  color: white;
   height: 150px;
   padding: 20px;
-  color: white;
+  margin-bottom: 1em;
 }
 
 .App-title {
